--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,26 @@
+@font-face {
+  font-family: "Gotham Light";
+  src: url("../public/font/GothamLight.otf") format("opentype");
+}
 
-body {
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'Gotham Light','Roboto', sans-serif;
+} 
+
+html,body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 code {
@@ -17,4 +32,23 @@ code {
   color: rgba(75, 39, 39, 0.378);
   background: rgba(75, 39, 39, 0.378);
   border: 3px solid rgb(177, 177, 177);
+}
+
+.rbc-allday-cell{
+  display: none;
+}
+
+.ant-layout-content{
+  padding-left:10px;
+  padding-right:10px;
+}
+
+.rbc-time-view{
+  border-radius: 5px;
+}
+
+.rbc-time-slot{
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
 }
